<resources>
    <string name="app_name">FinalYearAndroid</string>
    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_profile">User Profile</string>
    <string name="title_geofence">Geofences</string>
    <string name="title_extra_info">Extra Info</string>
    <string name="title_patient_profile">Patient Profile</string>
    <string name="loginBtn">Login</string>
    <string name="emailTV">Email:</string>
    <string name="passwordTV">Password:</string>
    <string name="emailHint">Enter email here</string>
    <string name="passwordHint">Enter current password here</string>
    <string name="forgotPasswordTV">Forgot Password? \nClick here to reset</string>
    <string name="signupTV">Don\'t have an account? \nSign Up here!</string>
    <string name="loading">Loading…</string>
    <string name="menu_logout">Logout</string>
    <string name="extra_info_button">View Extra Info</string>
    <string name="geofence_button">Edit Geofences</string>
    <string name="phoneHint">Enter in the format of: +353860000000</string>
    <string name="newPasswordHint">Enter new password here</string>
    <string name="repeatNewPasswordHint">Repeat new password here</string>
    <string name="passwordBtn">Update Password</string>
    <string name="updateProfileTV">Update Your Profile!</string>
    <string name="changePasswordTV">Change Password?</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="verifyBtn">Verify Email</string>
    <string name="changeEmailTV">Change Email?</string>
    <string name="emailBtn">Change Email</string>
    <string name="phoneTV">Text Alerts?</string>
    <string name="phoneBtn">Opt In</string>
    <string name="verifyCodeHint">Enter Verification Code</string>
    <string name="verifyCodeBtn">Verify</string>
    <string name="alertTV">Receive Notification Alerts?</string>
    <string-array name="spinner">
        <item>Heart Rate</item>
        <item>Steps</item>
        <item>Sleep</item>
    </string-array>
    <string-array name="zone">
        <item>Green</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
